force-app/main/default/objects/Covid_Test__c/Covid_Test__c.object-meta.xml
<CustomObject>
    <label>Covid Test</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Covid Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covid Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>