force-app/main/default/objects/Covid_Test__c/fields/Case_Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Reported_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Reported Date</label>
    <type>Date</type>
</CustomField>