force-app/main/default/objects/Covid_Test__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Covid Tests</relationshipLabel>
    <relationshipName>Covid_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>