force-app/main/default/objects/Covid_Test__c/fields/Covid_Positive_Date__c.field-meta.xml
<CustomField>
    <fullName>Covid_Positive_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Covid Positive Date</label>
    <type>Date</type>
</CustomField>