force-app/main/default/objects/Covid_Test__c/fields/Covid_Tested_Date__c.field-meta.xml
<CustomField>
    <fullName>Covid_Tested_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Covid Tested Date</label>
    <type>Date</type>
</CustomField>